added teacher patch以外
